# learn-monorepo

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  graph.dot  package.json  pnpm-lock.yaml  tsconfig.json
