module(name = "bazel_pnpm_learn", version = "1.0.0")

bazel_dep(name = "aspect_bazel_lib", version = "2.14.0")
bazel_dep(name = "rules_nodejs", version = "6.3.3")
bazel_dep(name = "aspect_rules_js", version = "2.1.3")
bazel_dep(name = "aspect_rules_ts", version = "3.8.5")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)

node.toolchain(node_version = "22.12.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)

rules_ts_ext.deps(
    ts_version_from = "//:package.json",
)

use_repo(npm, "npm")
use_repo(rules_ts_ext, "npm_typescript")
